examples/test/testpolicy11384.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11384
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key39: value13
      key47: value41
      key42: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value19
      podSelector:
        matchLabels:
          key28: value28
